--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swipe": "^1.7.7",
     "web-vitals": "^2.1.4"
   },
